--- a/PodoDemo/Views/Todoes/Index.cshtml
+++ b/PodoDemo/Views/Todoes/Index.cshtml
@@ -1,95 +1,172 @@
-@model IEnumerable<PodoDemo.Models.Todo>
+﻿@model string
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "할일";
 }
 
-<h2>Index</h2>
+<script type="text/javascript">
+    $(document).ready(function () {
+        GetUserDDL('1-1', '@ViewBag.UserId', 'Ownerid', SetoptionTag, '', true, false, false); // 담당자
+        GetOptionDDL('5', 'State', SetoptionTag, '', true, false, false);     // 상태
+        $("#jqdatetimeinput_Startdate").jqxDateTimeInput({ width: '100%', formatString: 'yyyy-MM-dd' });
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Description)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Regardingobjectid)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Startdate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Enddate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Createdate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Createuser)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Modifydate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Modifyuser)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Ownerid)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.State)
-                </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Regardingobjectid)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Startdate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Enddate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Createdate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Createuser)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Modifydate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Modifyuser)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ownerid)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.State)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Todoid">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Todoid">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Todoid">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+        SetBasicElement("@Html.Raw(Model)");
+
+        // 고객타입, 담당자 변경 시 마다 거래처 재검색
+        $("#State, #Ownerid").change(function () {
+            SearchTodoes();
+        });
+
+    });
+
+    // 기본적으로 그리는 화면 내용
+    function SetBasicElement(todoListRaw) {
+        var source =
+            {
+                localdata: todoListRaw,
+                datatype: "json",
+                datafields:
+                [
+                    { name: 'Todoid', type: 'number' },
+                    { name: 'Name', type: 'string' },
+                    { name: 'Startdate', type: 'date' },
+                    { name: 'Ownerid', type: 'string' },
+                    { name: 'State', type: 'string' }
+                ]
+            };
+
+        var dataAdapter = new $.jqx.dataAdapter(source);
+
+        $("#todoList").jqxGrid(
+            {
+                width: '100%',
+                source: dataAdapter,
+                pageable: true,
+                autoheight: true,
+                autorowheight: true,
+                sortable: true,
+                altrows: true,
+                enabletooltips: true,
+                editable: false,
+                selectionmode: 'singlerow',
+                pagesizeoptions: [10, 15, 20, 25, 30, 35, 40, 45, 50],
+                //showfilterrow: true,
+                filterable: true,
+                pagesize: 15,
+                theme: "metroCustom",//테마설정
+                localization: GetLocalizationString(),
+                columns: [
+                    { text: "Todoid", datafield: "Todoid", hidden: true },
+                    { text: "제목", datafield: "Name", align: 'center', cellsalign: 'left', width: '30%', minwidth: '100px' },
+                    { text: "관련항목", datafield: "Regardingobjectid", align: 'center', cellsalign: 'left', width: '20%', minwidth: '100px' },
+                    { text: "시작일", datafield: 'Startdate', align: 'center', cellsalign: 'center', width: '15%', minwidth: '100px' },
+                    { text: "상태", datafield: "State", align: 'center', cellsalign: 'center', width: '15%', minwidth: '100px' },
+                    { text: '담당자', datafield: 'Ownerid', align: 'center', cellsalign: 'center', width: '20%', minwidth: '100px' },
+                ]
+            });
+    }
+
+    // 거래처 검색 후 반영
+    function SearchTodoes() {
+        var SearchInfo = new Object();
+        SearchInfo.Name = $("#Name").val();
+        SearchInfo.State = $("#State").val();
+        SearchInfo.Startdate = $("#Startdate").val();
+        SearchInfo.Ownerid = $("#Ownerid").val();
+
+        //JSON.stringify(SearchInfo)
+        var todoListRaw
+            = ExecuteAjax("POST", "/Todoes/Search", "json", "application/json", SearchInfo);
+        // 리스트에 반영
+        SetBasicElement(todoListRaw);
+    }
+</script>
+
+<div class="View">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 custom-header">
+                <p class="text-left">
+                    할일 목록
+                </p>
+            </div>
+        </div>
+
+        <form class="form-horizontal" id="SearcTodoesForm">
+            <input type="hidden" id="IsPop" name="IsPop" value="@Html.Raw(ViewBag.isPop)" />
+
+            <div class="form-group">
+                <div class="col-md-12">
+                    <div class="custom-title">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        <span>검색</span>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-1 control-label">제목</label>
+                <div class="col-md-2">
+                    <input type="text" id="Name" name="Name" class="form-control" placeholder="제목 입력" onkeypress="ExecuteEnterkey(SearchTodoes);" />
+                </div>
+
+                <label class="col-md-1 control-label">상태</label>
+                <div class="col-md-2">
+                    <select id="State" name="State" class="form-control"></select>
+                </div>
+                <label class="col-md-1 control-label">시작일자</label>
+                <div class="col-md-2">
+                    <div id="jqdatetimeinput_Startdate"></div>
+                    <input type="hidden" id="Startdate" name="Startdate" />
+                </div>
+
+                <label class="col-md-1 control-label">담당자</label>
+                <div class="col-md-2">
+                    <select id="Ownerid" name="Ownerid" class="form-control"></select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-10 col-md-2">
+                    <button type="button" class="btn btn-default" onclick="SearchTodoes();">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        검색
+                    </button>
+                </div>
+            </div>
+        </form>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="custom-title">
+                    <hr />
+                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                    <span>상세 내용</span>
+                </div>
+                <div id="todoList"></div>
+            </div>
+        </div>
+
+        @if (ViewBag.isPop)
+        {
+            <div class="row">
+                <div class="col-md-offset-10 col-md-2">
+                    <button type="button" class="btn btn-default" onclick="window.close();">
+                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+                        닫기
+                    </button>
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="row">
+                <div class="col-md-offset-10 col-md-2">
+                    <a href="/Accounts/Create" class="btn btn-default">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        할일 생성
+                    </a>
+                </div>
+            </div>
+        }
+    </div>
+</div>
