--- a/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
+++ b/PodoDemo/Views/Shared/Components/MenuList/Default.cshtml
@@ -12,7 +12,8 @@
 
         // 로그 아웃 버튼 클릭 시
         $("#logoutBtn").click(function () {
-
+            var dd = ExecuteAjax("POST", window.location.origin + "/api/CommonAPI/Logoutdd", "json", "application/json");
+            alert(dd);
         });
     });
 </script>
@@ -60,6 +61,9 @@
                     </li>
                 }
             </ul>
+
+            <p class="navbar-text"><strong>@ViewBag.UserName</strong>님, 환영합니다.</p>
+
             <form class="navbar-form navbar-left" role="search">
                 <button type="button" id="logoutBtn" class="btn btn-default">로그아웃</button>
             </form>
