페이지 별 권한 수정 시작

--- a/PodoDemo/Views/Accounts/Index.cshtml
+++ b/PodoDemo/Views/Accounts/Index.cshtml
@@ -10,6 +10,10 @@
 }
 <script type="text/javascript">
     $(document).ready(function () {
+
+        console.log("@ViewData["Write"]");
+
+
         SetBasicElement(@Html.Raw(Model));
 
         // 검색 조건 키 / 적용할 HTML코드 ID / 콜백함수 / 기본 선택 값 / 전체 / 맨위값 빈값 / 권한
@@ -195,14 +199,17 @@
         }
         else
         {
-            <div class="row">
-                <div class="col-md-offset-10 col-md-2">
-                    <a href="/Accounts/Create" class="btn btn-default">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                        거래처 생성
-                    </a>
+            @if (ViewData["Write"].ToString().Equals("4-1") || ViewData["Write"].ToString().Equals("4-2"))
+            {
+                <div class="row">
+                    <div class="col-md-offset-10 col-md-2">
+                        <a href="/Accounts/Create" class="btn btn-default">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            거래처 생성
+                        </a>
+                    </div>
                 </div>
-            </div>
+            }
         }
     </div>
 </div>
