--- a/PodoDemo/Views/Home/Error.cshtml
+++ b/PodoDemo/Views/Home/Error.cshtml
@@ -16,6 +16,10 @@
     {
         <h1>사용자가 존재하지 않습니다. 다시 시도해주세요.</h1>
     }
+    else if(ViewBag.message == "UserauthError")
+    {
+        <h1>해당 페이지에 대한 권한이 존재하지 않습니다. 관리자에게 문의해주세요.</h1>
+    }
     else
     {
         <h1>에러가 발생했습니다. 관리자에게 문의해주세요.</h1>
