--- a/PodoDemo/Views/Accounts/Create.cshtml
+++ b/PodoDemo/Views/Accounts/Create.cshtml
@@ -91,6 +91,7 @@
         </div>
 
         <form class="form-horizontal" id="AccountCreateForm" action="/Accounts/Create" method="post">
+            @Html.AntiForgeryToken();
             <div class="form-group">
                 <label class="col-md-1 control-label requireField">회사명</label>
                 <div class="col-md-3">
