--- a/PodoDemo/Views/Accounts/Create.cshtml
+++ b/PodoDemo/Views/Accounts/Create.cshtml
@@ -91,7 +91,7 @@
         </div>
 
         <form class="form-horizontal" id="AccountCreateForm" action="/Accounts/Create" method="post">
-            @Html.AntiForgeryToken();
+            @Html.AntiForgeryToken()
             <div class="form-group">
                 <label class="col-md-1 control-label requireField">회사명</label>
                 <div class="col-md-3">
@@ -126,16 +126,16 @@
             </div>
 
             <div class="form-group">
-                
+
 
                 <label class="col-md-1 control-label">사업자번호</label>
                 <div class="col-md-3">
                     <input type="text" id="Biznum" name="Biznum" class="form-control" placeholder="사업자번호" />
-                </div>                
+                </div>
             </div>
 
             <div class="form-group">
-                
+
             </div>
 
             <div class="form-group">
@@ -145,20 +145,32 @@
                 </div>
             </div>
         </form>
-        
+
         <div class="row">
-            <div class="col-md-offset-8 col-md-2 custom-row-btn-margin">
-                <button type="button" id="CreateAccountButton" class="btn btn-default" onclick="SubmitForm();">
-                    <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
-                    저장
-                </button>
-            </div>
-            <div class="col-md-2 custom-row-btn-margin">
-                <a href="/Accounts/Index" class="btn btn-default">
-                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
-                    목록
-                </a>
-            </div>
+            @if (ViewData["Write"].ToString().Equals("4-1") || ViewData["Write"].ToString().Equals("4-2"))
+            {
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" id="CreateAccountButton" class="btn btn-default" onclick="SubmitForm();">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                        저장
+                    </button>
+                </div>
+                <div class="col-md-2 custom-row-btn-margin">
+                    <a href="/Accounts/Index" class="btn btn-default">
+                        <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                        목록
+                    </a>
+                </div>
+            }
+            else
+            {
+                <div class="col-md-2 custom-row-btn-margin">
+                    <a href="/Accounts/Index" class="btn btn-default">
+                        <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                        목록
+                    </a>
+                </div>
+            }
         </div>
     </div>
 </div>
