--- a/PodoDemo/Views/Accounts/Edit.cshtml
+++ b/PodoDemo/Views/Accounts/Edit.cshtml
@@ -167,7 +167,7 @@
         </div>
 
         <form class="form-horizontal" id="AccountEditForm" action="/Accounts/Edit/@Model.Accountid" method="post">
-            @Html.AntiForgeryToken();
+            @Html.AntiForgeryToken()
             <input type="hidden" id="Accountid" name="Accountid" value="@Model.Accountid" />
             <input type="hidden" asp-for="Createdate" value="@Model.Createdate" />
             <input type="hidden" id="Createuser" name="Createuser" value="@Model.Createuser" />
@@ -233,18 +233,25 @@
         </form>
 
         <div class="row">
-            <div class="col-md-offset-6 col-md-2 custom-row-btn-margin">
-                <button type="button" id="EditButton" class="btn btn-default" onclick="SubmitForm();">
-                    <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
-                    저장
-                </button>
-            </div>
-            <div class="col-md-2 custom-row-btn-margin">
-                <button type="button" id="DeleteButton" class="btn btn-default btn-danger">
-                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                    삭제
-                </button>
-            </div>
+            @if (ViewData["Modify"].ToString().Equals("4-1") || ViewData["Modify"].ToString().Equals("4-2"))
+            {
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" id="EditButton" class="btn btn-default" onclick="SubmitForm();">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                        저장
+                    </button>
+                </div>
+
+            }
+            @if (ViewData["Delete"].ToString().Equals("4-1") || ViewData["Delete"].ToString().Equals("4-2"))
+            {
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" id="DeleteButton" class="btn btn-default btn-danger">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        삭제
+                    </button>
+                </div>
+            }
             <div class="col-md-2 custom-row-btn-margin">
                 <a href="/Accounts/Index" class="btn btn-default">
                     <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
