--- a/PodoDemo/Views/Contacts/Create.cshtml
+++ b/PodoDemo/Views/Contacts/Create.cshtml
@@ -84,7 +84,7 @@
         </div>
 
         <form class="form-horizontal" id="ContactsCreateForm" action="/Contacts/Create" method="post">
-            @Html.AntiForgeryToken();
+            @Html.AntiForgeryToken()
             <div class="form-group">
                 <label class="col-md-1 control-label requireField">성명</label>
                 <div class="col-md-3">
@@ -150,13 +150,20 @@
             </div>
         </form>
 
+
+
         <div class="row">
-            <div class="col-md-offset-8 col-md-2 custom-row-btn-margin">
-                <button type="button" id="CreateAccountButton" class="btn btn-default" onclick="SubmitForm();">
-                    <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
-                    저장
-                </button>
-            </div>
+            @if (ViewData["Write"].ToString().Equals("4-1") || ViewData["Write"].ToString().Equals("4-2"))
+            {
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" id="CreateAccountButton" class="btn btn-default" onclick="SubmitForm();">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                        저장
+                    </button>
+                </div>
+                
+            }
+            
             <div class="col-md-2 custom-row-btn-margin">
                 <a href="/Accounts/Index" class="btn btn-default">
                     <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
