거래처 관련 권한 수정

--- a/PodoDemo/Views/Accounts/Edit.cshtml
+++ b/PodoDemo/Views/Accounts/Edit.cshtml
@@ -35,12 +35,25 @@
     }
 
     // 폼이 입력될 때
-    function SubmitForm() {
-        // 유효성 검사 후 진행
-        if (ValidateForm()) {
-            $("#Founddate").val($('#jqdatetimeinput_founddate').jqxDateTimeInput('getText'));
-            $("#Detail").val($("#tempDetail").html());
-            $("#AccountEditForm").submit();
+    function SubmitForm(targetName) {
+        if (targetName == "Edit") {
+            // 유효성 검사 후 진행
+            if (ValidateForm()) {
+                $("#Founddate").val($('#jqdatetimeinput_founddate').jqxDateTimeInput('getText'));
+                $("#Detail").val($("#tempDetail").html());
+                $("#AccountEditForm").prop("action", "/Accounts/" + targetName + "/@Model.Accountid");
+                $("#AccountEditForm").submit();
+            }
+        } else if (targetName == "Delete") {
+            if (confirm("해당 내용을 정말로 삭제하시겠습니까?\n삭제후에는 복원되지 않습니다.")) {
+                if ($("#Accountid").val() != "" && $("#Accountid").val() != null) {
+                    $("#AccountEditForm").prop("action", "/Accounts/" + targetName + "/@Model.Accountid");
+                    $("#AccountEditForm").submit();
+                } else {
+                    alert("삭제할 내용이 없습니다.");
+                    return;
+                }
+            }
         }
     }
 
@@ -149,6 +162,7 @@
                 ]
             });
     }
+
 </script>
 <div class="View">
     <div class="container custom-container">
@@ -166,7 +180,7 @@
             </div>
         </div>
 
-        <form class="form-horizontal" id="AccountEditForm" action="/Accounts/Edit/@Model.Accountid" method="post">
+        <form class="form-horizontal" id="AccountEditForm" method="post">
             @Html.AntiForgeryToken()
             <input type="hidden" id="Accountid" name="Accountid" value="@Model.Accountid" />
             <input type="hidden" asp-for="Createdate" value="@Model.Createdate" />
@@ -236,7 +250,7 @@
             @if (ViewData["Modify"].ToString().Equals("4-1") || ViewData["Modify"].ToString().Equals("4-2"))
             {
                 <div class="col-md-2 custom-row-btn-margin">
-                    <button type="button" id="EditButton" class="btn btn-default" onclick="SubmitForm();">
+                    <button type="button" id="EditButton" class="btn btn-default" onclick="SubmitForm('Edit');">
                         <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
                         저장
                     </button>
@@ -246,7 +260,7 @@
             @if (ViewData["Delete"].ToString().Equals("4-1") || ViewData["Delete"].ToString().Equals("4-2"))
             {
                 <div class="col-md-2 custom-row-btn-margin">
-                    <button type="button" id="DeleteButton" class="btn btn-default btn-danger">
+                    <button type="button" id="DeleteButton" class="btn btn-default btn-danger" onclick="SubmitForm('Delete');">
                         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                         삭제
                     </button>
