--- a/PodoDemo/Views/Contacts/Index.cshtml
+++ b/PodoDemo/Views/Contacts/Index.cshtml
@@ -31,7 +31,7 @@
             var data = $('#contactList').jqxGrid('getrowdata', boundIndex);
 
             @*
-                팝업 여부에 따라 팝업이면 기본적으로 거래처 검색 페이지라고 생각해야 한다.
+                팝업 여부에 따라 팝업이면 기본적으로 연락처 검색 페이지라고 생각해야 한다.
             *@
             @if (ViewBag.isPop)
             {
