사용자 목록 불러오기 수정

--- a/PodoDemo/Views/Contacts/Edit.cshtml
+++ b/PodoDemo/Views/Contacts/Edit.cshtml
@@ -9,7 +9,7 @@
     $(document).ready(function () {
         SetBasicElement();// 기본적으로 그리는 화면 내용
         // 부서값 / 적용할 HTML코드 ID / 콜백함수 / 기본 선택 값 / 전체 / 맨위값 빈값 / 권한
-        GetUserDDL('1-1', '@Model.Ownerid', 'Ownerid', SetoptionTag, '@Model.Ownerid', false, false, false);
+        GetUserDDL("", '@Model.Ownerid', 'Ownerid', SetoptionTag, '@Model.Ownerid', false, false, false);
     });
 
     // 기본적으로 그리는 화면 내용
