--- a/PodoDemo/Views/UserAuths/Index.cshtml
+++ b/PodoDemo/Views/UserAuths/Index.cshtml
@@ -6,7 +6,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        GetUserDDL('1-1', '@ViewBag.UserId', 'Ownerid', SetoptionTag, '@ViewBag.UserId', false, false, false);
+        GetUserDDL("", '@ViewBag.UserId', 'Ownerid', SetoptionTag, '@ViewBag.UserId', false, false, false);
 
         GetOptionDDL('4', 'ReadAll', SetoptionTag, '', false, false, false);
         GetOptionDDL('4', 'ModifyAll', SetoptionTag, '', false, false, false);
