모양 수정 및 권한관련 수정

--- a/PodoDemo/Views/Home/Error.cshtml
+++ b/PodoDemo/Views/Home/Error.cshtml
@@ -26,5 +26,6 @@
     }
 
     <a href="/Home/Index">로그인 페이지로 돌아가기</a>
+    <a href="#" id="historyBackTag" onclick="history.back();">이전 페이지로 돌아가기</a>
 </body>
 </html>
