--- a/PodoDemo/Views/Manage/MenuEdit.cshtml
+++ b/PodoDemo/Views/Manage/MenuEdit.cshtml
@@ -111,7 +111,7 @@
 
 
             <div class="form-group">
-                <div class="col-md-offset-6 col-md-2 custom-row-btn-margin">
+                <div class="col-md-2 custom-row-btn-margin">
                     <button type="button" class="btn btn-default" onclick="SubmitForm();">
                         <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
                         저장
