--- a/PodoDemo/Views/UserAuths/Index.cshtml
+++ b/PodoDemo/Views/UserAuths/Index.cshtml
@@ -294,7 +294,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-offset-10 col-md-2">
+            <div class="col-md-2">
                 <a href="#" class="btn btn-default" onclick="SaveUserauthList();">
                     <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
                     저장
