--- a/PodoDemo/Views/Manage/SubmenuCreate.cshtml
+++ b/PodoDemo/Views/Manage/SubmenuCreate.cshtml
@@ -132,7 +132,7 @@
             </div>
 
             <div class="form-group">
-                <div class="col-md-offset-8 col-md-2 custom-row-btn-margin">
+                <div class="col-md-2 custom-row-btn-margin">
                     <button type="button" class="btn btn-default" onclick="SubmitForm();">
                         <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
                         저장
