--- a/PodoDemo/Views/Users/Create.cshtml
+++ b/PodoDemo/Views/Users/Create.cshtml
@@ -180,7 +180,7 @@
         </form>
 
         <div class="row">
-            <div class="col-md-offset-8 col-md-2 custom-row-btn-margin">
+            <div class="col-md-2 custom-row-btn-margin">
                 <button type="button" id="CreateUserButton" class="btn btn-default" onclick="SubmitForm();">
                     <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
                     저장
