--- a/PodoDemo/Views/Users/Index.cshtml
+++ b/PodoDemo/Views/Users/Index.cshtml
@@ -103,7 +103,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-offset-10 col-md-2">
+            <div class="col-md-2">
                 <a href="/Users/Create" class="btn btn-default">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                     사용자 생성
